# MLOps-Insurance-Project

./: .gitignore  README.md  demo.py  project flow.txt  pyproject.toml
notebook/: mangoDB.ipynb
src/logger/: __init__.py
