[project]
name = "vehicle-insurance"
version = "0.0.1"
description = "A Vehicle insurance project for productionizing models"
authors = [{name = "Prathamesh Uravane", email = "upratham2002@gmail.com"}]
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.42.30",
    "botocore>=1.42.30",
    "certifi>=2026.1.4",
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mypy-boto3-s3>=1.42.21",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
